well formatted css

--- a/index.html
+++ b/index.html
@@ -22,29 +22,146 @@
       --border-color: #334155;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Segoe UI', sans-serif; background: var(--bg-color); color: var(--text-color); line-height: 1.6; transition: all 0.3s ease; }
-    nav { display: flex; justify-content: space-between; align-items: center; padding: 1.5rem 2rem; background: var(--card-bg); border-bottom: 1px solid var(--border-color); }
-    nav h1 { font-size: 1.8rem; font-weight: bold; }
-    nav a { margin-left: 1.5rem; text-decoration: none; color: var(--text-color); font-weight: 500; }
-    .btn { background: var(--primary-color); color: #fff; padding: 0.6rem 1.2rem; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; }
-    .hero { padding: 4rem 2rem; background: var(--section-bg); text-align: center; }
-    .hero h2 { font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem; }
-    .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
-    .hero img { width: 100%; max-width: 900px; border-radius: 12px; margin-top: 2rem; }
-    .features { padding: 4rem 2rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 2rem; background: var(--bg-color); }
-    .feature-card { background: var(--card-bg); border: 1px solid var(--border-color); border-radius: 12px; padding: 2rem; text-align: center; }
-    .feature-card i { font-size: 2rem; color: var(--primary-color); margin-bottom: 1rem; display: block; }
-    .feature-card h3 { font-size: 1.3rem; margin-bottom: 0.75rem; }
-    .feature-card p { font-size: 1rem; }
-    .cta { padding: 3rem 2rem; text-align: center; background: var(--section-bg); }
-    .faq { max-width: 800px; margin: auto; padding: 4rem 2rem; }
-    .faq h4 { font-size: 2rem; margin-bottom: 2rem; text-align: center; }
-    .accordion-item { margin-bottom: 1rem; }
-    .accordion-item button { width: 100%; text-align: left; padding: 1rem; background: var(--card-bg); border: 1px solid var(--border-color); border-radius: 8px; font-weight: bold; cursor: pointer; color: var(--text-color); }
-    .accordion-content { display: none; padding: 1rem; background: var(--card-bg); border-left: 1px solid var(--border-color); border-right: 1px solid var(--border-color); border-bottom: 1px solid var(--border-color); border-radius: 0 0 8px 8px; color: var(--text-color); }
-    footer { text-align: center; padding: 2rem; background: var(--card-bg); border-top: 1px solid var(--border-color); }
-    footer a { margin: 0 1rem; text-decoration: none; color: var(--text-color); }
-    .theme-toggle { margin-left: 1rem; background: none; color: var(--text-color); font-size: 1.2rem; cursor: pointer; border: none; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: var(--bg-color);
+      color: var(--text-color);
+      line-height: 1.6;
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 2rem;
+      background: var(--card-bg);
+      border-bottom: 1px solid var(--border-color);
+    }
+    nav h1 {
+      font-size: 1.8rem;
+      font-weight: bold;
+    }
+    nav a {
+      margin-left: 1.5rem;
+      text-decoration: none;
+      color: var(--text-color);
+      font-weight: 500;
+    }
+    .btn {
+      background: var(--primary-color);
+      color: #fff;
+      padding: 0.6rem 1.2rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .theme-toggle {
+      margin-left: 1rem;
+      background: none;
+      color: var(--text-color);
+      font-size: 1.2rem;
+      cursor: pointer;
+      border: none;
+    }
+    .hero {
+      padding: 4rem 2rem;
+      background: var(--section-bg);
+      text-align: center;
+    }
+    .hero h2 {
+      font-size: 2.5rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+    .hero img {
+      width: 100%;
+      max-width: 900px;
+      border-radius: 12px;
+      margin-top: 2rem;
+    }
+    .features {
+      padding: 4rem 2rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 2rem;
+      background: var(--bg-color);
+    }
+    .feature-card {
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      border-radius: 12px;
+      padding: 2rem;
+      text-align: center;
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+    .feature-card i {
+      font-size: 2rem;
+      color: var(--primary-color);
+      margin-bottom: 1rem;
+      display: block;
+    }
+    .feature-card h3 {
+      font-size: 1.3rem;
+      margin-bottom: 0.75rem;
+    }
+    .feature-card p {
+      font-size: 1rem;
+    }
+    .cta {
+      padding: 3rem 2rem;
+      text-align: center;
+      background: var(--section-bg);
+    }
+    .faq {
+      max-width: 800px;
+      margin: auto;
+      padding: 4rem 2rem;
+    }
+    .faq h4 {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    .accordion-item {
+      margin-bottom: 1rem;
+    }
+    .accordion-item button {
+      width: 100%;
+      text-align: left;
+      padding: 1rem;
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      color: var(--text-color);
+    }
+    .accordion-content {
+      display: none;
+      padding: 1rem;
+      background: var(--card-bg);
+      border-left: 1px solid var(--border-color);
+      border-right: 1px solid var(--border-color);
+      border-bottom: 1px solid var(--border-color);
+      border-radius: 0 0 8px 8px;
+      color: var(--text-color);
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background: var(--card-bg);
+      border-top: 1px solid var(--border-color);
+    }
+    footer a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: var(--text-color);
+    }
   </style>
 </head>
 <body>
@@ -137,8 +254,8 @@
 
     function toggleTheme() {
       const root = document.documentElement;
-      const theme = root.getAttribute('data-theme');
-      root.setAttribute('data-theme', theme === 'dark' ? 'light' : 'dark');
+      const current = root.getAttribute('data-theme');
+      root.setAttribute('data-theme', current === 'dark' ? 'light' : 'dark');
     }
   </script>
 </body>
