added image in website

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <section class="hero">
     <h2>India’s First Learning-First Social Platform</h2>
     <p>YujTech connects students, mentors, and educators through a powerful academic and career network.</p>
-    <img src="https://images.unsplash.com/photo-1600195077078-56a8d4b4d6ff?auto=format&fit=crop&w=1200&q=80" alt="Student community" />
+    <img src="images/student-community.webp" alt="Student community" />
   </section>
 
   <section class="features" id="features">
