--- a/index.html
+++ b/index.html
@@ -55,9 +55,27 @@
       border-radius: 6px;
       cursor: pointer;
       font-weight: bold;
+      display: inline-block;
+      text-align: center;
+      margin-left: 1rem; /* Added left margin */
+    }
+    @media (max-width: 768px) {
+      nav div {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .btn {
+        margin-top: 1rem;
+        width: 100%;
+        margin-left: 0; /* Remove left margin for mobile view */
+      }
+      .theme-toggle {
+        margin-left: 0; /* Align with the rest of the content in mobile view */
+      }
     }
     .theme-toggle {
-      margin-left: 1rem;
+      margin-left: 1.5rem; /* Adjusted margin for better spacing */
       background: none;
       color: var(--text-color);
       font-size: 1.2rem;
