--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>YujTech - India's Social Learning Platform</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" /> <!-- Added favicon link -->
   <style>
     :root {
       --bg-color: #ffffff;
