--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
       nav div {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center; /* Center align buttons */
+        gap: 1rem; /* Add spacing between buttons */
       }
       .btn {
-        margin-top: 1rem;
-        width: 100%;
-        margin-left: 0; /* Remove left margin for mobile view */
+        margin: 0; /* Remove left margin */
+        width: auto; /* Ensure proper width */
       }
       .theme-toggle {
-        margin-left: 0; /* Align with the rest of the content in mobile view */
+        margin: 0; /* Remove left margin */
       }
     }
     .theme-toggle {
