Update footer links to point to Terms and Conditions and Privacy Policy pages

--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
     <p>© 2025 YujTech</p>
     <div>
       <a href="#">About</a>
-      <a href="#">Terms</a>
-      <a href="#">Privacy</a>
+      <a href="terms-and-conditions.html">Terms and Conditions</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
     </div>
   </footer>
  
