Add meta tags for SEO and create robots.txt and sitemap.xml files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="YujTech - India's first learning-first social platform connecting students, mentors, and educators through a powerful academic and career network." />
+  <meta name="keywords" content="YujTech, social learning platform, mentorship, academic network, career guidance, student community" />
+  <meta name="author" content="YujTech" />
   <title>YujTech - India's Social Learning Platform</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" href="images/yuj_favicon.ico" type="image/x-icon" /> <!-- Added favicon link -->
@@ -194,65 +197,68 @@
     </div>
   </nav>
 
-  <section class="hero">
-    <h2>India’s First Learning-First Social Platform</h2>
+  <header class="hero">
+    <h1>India’s First Learning-First Social Platform</h1>
     <p>YujTech connects students, mentors, and educators through a powerful academic and career network.</p>
-    <img src="images/student-community.webp" alt="Student community" />
-  </section>
+    <img src="images/student-community.webp" alt="Student community collaborating and learning together" />
+  </header>
 
-  <section class="features" id="features">
-    <div class="feature-card">
-      <i class="bi bi-people-fill"></i>
-      <h3>YuConnect</h3>
-      <p>Join communities, forums, and collaborate through real-time group chats and feeds.</p>
-    </div>
-    <div class="feature-card">
-      <i class="bi bi-person-video2"></i>
-      <h3>YuMentor</h3>
-      <p>Request 1:1 mentorship, video calls, and career guidance from verified professionals.</p>
-    </div>
-    <div class="feature-card">
-      <i class="bi bi-images"></i>
-      <h3>Media & Feed</h3>
-      <p>Share academic milestones, projects, and updates through an interactive social feed.</p>
-    </div>
-    <div class="feature-card">
-      <i class="bi bi-briefcase-fill"></i>
-      <h3>YuBridge</h3>
-      <p>Discover internships, build portfolios, and earn mentor endorsements.</p>
-    </div>
-    <div class="feature-card">
-      <i class="bi bi-calendar-event"></i>
-      <h3>YuEvent</h3>
-      <p>Attend webinars, campus events, and workshops through your academic calendar.</p>
-    </div>
-    <div class="feature-card">
-      <i class="bi bi-globe"></i>
-      <h3>Inclusive by Design</h3>
-      <p>Optimized for India – multilingual, low-data use, WhatsApp alerts & more.</p>
-    </div>
-  </section>
+  <main>
+    <section class="features" id="features">
+      <h2>Features</h2>
+      <div class="feature-card">
+        <i class="bi bi-people-fill"></i>
+        <h3>YuConnect</h3>
+        <p>Join communities, forums, and collaborate through real-time group chats and feeds.</p>
+      </div>
+      <div class="feature-card">
+        <i class="bi bi-person-video2"></i>
+        <h3>YuMentor</h3>
+        <p>Request 1:1 mentorship, video calls, and career guidance from verified professionals.</p>
+      </div>
+      <div class="feature-card">
+        <i class="bi bi-images"></i>
+        <h3>Media & Feed</h3>
+        <p>Share academic milestones, projects, and updates through an interactive social feed.</p>
+      </div>
+      <div class="feature-card">
+        <i class="bi bi-briefcase-fill"></i>
+        <h3>YuBridge</h3>
+        <p>Discover internships, build portfolios, and earn mentor endorsements.</p>
+      </div>
+      <div class="feature-card">
+        <i class="bi bi-calendar-event"></i>
+        <h3>YuEvent</h3>
+        <p>Attend webinars, campus events, and workshops through your academic calendar.</p>
+      </div>
+      <div class="feature-card">
+        <i class="bi bi-globe"></i>
+        <h3>Inclusive by Design</h3>
+        <p>Optimized for India – multilingual, low-data use, WhatsApp alerts & more.</p>
+      </div>
+    </section>
 
-  <section class="cta">
-    <h3>Start Your Learning Journey with Yuj</h3>
-    <button class="btn">Join the Waitlist</button>
-  </section>
+    <section class="cta">
+      <h2>Start Your Learning Journey with Yuj</h2>
+      <button class="btn">Join the Waitlist</button>
+    </section>
 
-  <section class="faq" id="faq">
-    <h4>Frequently Asked Questions</h4>
-    <div class="accordion-item">
-      <button onclick="toggleFAQ(this)">Is Yuj free to use?</button>
-      <div class="accordion-content">Yes, Yuj is completely free for students, educators, and mentors across India.</div>
-    </div>
-    <div class="accordion-item">
-      <button onclick="toggleFAQ(this)">How do mentorship requests work?</button>
-      <div class="accordion-content">Students browse mentors, check availability, and request sessions directly in-app.</div>
-    </div>
-    <div class="accordion-item">
-      <button onclick="toggleFAQ(this)">Can I create my own community?</button>
-      <div class="accordion-content">Yes, verified users can create subject or campus-based groups and manage discussions.</div>
-    </div>
-  </section>
+    <section class="faq" id="faq">
+      <h2>Frequently Asked Questions</h2>
+      <div class="accordion-item">
+        <button onclick="toggleFAQ(this)">Is Yuj free to use?</button>
+        <div class="accordion-content">Yes, Yuj is completely free for students, educators, and mentors across India.</div>
+      </div>
+      <div class="accordion-item">
+        <button onclick="toggleFAQ(this)">How do mentorship requests work?</button>
+        <div class="accordion-content">Students browse mentors, check availability, and request sessions directly in-app.</div>
+      </div>
+      <div class="accordion-item">
+        <button onclick="toggleFAQ(this)">Can I create my own community?</button>
+        <div class="accordion-content">Yes, verified users can create subject or campus-based groups and manage discussions.</div>
+      </div>
+    </section>
+  </main>
 
   <footer>
     <p>© 2025 YujTech</p>
